set up backend but not the controllers

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,5 @@ CLOUDINARY_CLOUD_NAME = dpc7pihzh
 CLOUDINARY_API_KEY = 482465434536881
 
 CLOUDINARY_API_SECRET = KpezriMbHkHzhGhTeI-iDifIsss
+
+SECRET_KEY = "LUFFYWILLBEKINGOFTHEPIRATES!"
