added default user photo

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,5 @@ CLOUDINARY_API_KEY = 482465434536881
 CLOUDINARY_API_SECRET = KpezriMbHkHzhGhTeI-iDifIsss
 
 SECRET_KEY = "LUFFYWILLBEKINGOFTHEPIRATES!"
+
+DEFAULT_USER_PHOTO = 'https://res.cloudinary.com/dpc7pihzh/image/upload/v1681094798/defaultProfile_zyiadk.jpg'
