--- a/server/.env
+++ b/server/.env
@@ -8,4 +8,4 @@ CLOUDINARY_API_SECRET = KpezriMbHkHzhGhTeI-iDifIsss
 
 SECRET_KEY = "LUFFYWILLBEKINGOFTHEPIRATES!"
 
-DEFAULT_USER_PHOTO = 'https://res.cloudinary.com/dpc7pihzh/image/upload/v1681094798/defaultProfile_zyiadk.jpg'
+DEFAULT_USER_PHOTO = 'ProfilePic.png'
