--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
